--- a/styles/layoutStyle.scss
+++ b/styles/layoutStyle.scss
@@ -332,4 +332,14 @@ table {
 strong{
     font-weight: bold;
 }
+h5{
+    font-size: 1.4rem;
+}
+
+h4, h3{
+    font-size: 1.5rem;
+}
+h2{
+    font-size: 1.6rem;
+}
 // markdown的style的结尾
