--- a/styles/layoutStyle.scss
+++ b/styles/layoutStyle.scss
@@ -334,12 +334,15 @@ strong{
 }
 h5{
     font-size: 1.4rem;
+    margin-top: 1rem;
 }
 
 h4, h3{
-    font-size: 1.5rem;
+    font-size: 1.4rem;
+    margin-top: 1rem;
 }
 h2{
-    font-size: 1.6rem;
+    font-size: 1.4rem;
+    margin-top: 1rem;
 }
 // markdown的style的结尾
