--- a/styles/InfoThumdsIcon.module.scss
+++ b/styles/InfoThumdsIcon.module.scss
@@ -40,6 +40,30 @@
     display: flex;
     align-items: center;
 }
+.back{
+    justify-content: center;
+    width: 48px;
+    height: 48px;
+    font-size: 18px;
+    border-radius: 50%;
+    box-shadow: 0 2px 10px rgba(0,0,0,.05);
+    background-color: #fff;
+    display: flex;
+    align-items: center;
+}
+.anticonBack {
+    cursor: pointer;
+    display: inline-block;
+    color: inherit;
+    font-style: normal;
+    line-height: 0;
+    text-align: center;
+    text-transform: none;
+    vertical-align: -.125em;
+    text-rendering: optimizeLegibility;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+}
 .anticon {
     cursor: pointer;
     display: inline-block;
