--- a/styles/special.module.scss
+++ b/styles/special.module.scss
@@ -10,3 +10,16 @@
     margin-top: 30px;
     height: 100%;
 }
+.imgHead{
+    width: 100%;
+    // height: 200px;
+}
+.imgdiv{
+    width: 100%;
+    height: 205px;
+    overflow: hidden;
+}
+.Meta{
+    width: 100%;
+    height: 100px;
+}
