--- a/styles/header.module.scss
+++ b/styles/header.module.scss
@@ -2,6 +2,7 @@
 .div{
     background: $mainColor;
     .header{
+        background: $mainColor;
         height:56px;
         // box-shadow: 1px 1px 10px #f6f6f6;
         display: flex;
